@@ -41,6 +41,7 @@ s-garpro.o\
 s-garsta.o\
 s-garloo.o\
 s-gaprco.o\
+s-garela.o\
 s-garter.o\
 s-garuti.o\
 s-parint.o\
@@ -78,6 +79,7 @@ ${srcdir}/s-garpro.ads ${srcdir}/s-garpro.adb \
 ${srcdir}/s-garsta.ads ${srcdir}/s-garsta.adb \
 ${srcdir}/s-garloo.ads ${srcdir}/s-garloo.adb \
 ${srcdir}/s-gaprco.ads ${srcdir}/s-gaprco.adb \
+${srcdir}/s-garela.ads ${srcdir}/s-garela.adb \
 ${srcdir}/s-garter.ads ${srcdir}/s-garter.adb \
 ${srcdir}/s-garuti.ads ${srcdir}/s-garuti.adb \
 ${srcdir}/s-parint.ads ${srcdir}/s-parint.adb \
