@@ -1,0 +1,5 @@
+with System.Garlic.Options;
+pragma Elaborate_All (System.Garlic.Options);
+package System.Garlic.Elaboration is
+   pragma Elaborate_Body;
+end System.Garlic.Elaboration;
